--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -1,5 +1,6 @@
 [Popular]
-FileSystem=../Media/models
+FileSystem=../Media/materials/textures
+FileSystem=../Media/materials/textures/nvidia
 
 [Hlms]
 DoNotUseAsResource=../Media
