--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ set(CMAKE_FIND_ROOT_PATH ${LEDERNIERMORKID_DEPENDENCIES_DIR} "${CMAKE_FIND_ROOT_
 set(OGRE_HOME ${LEDERNIERMORKID_DEPENDENCIES_DIR})
 set(ENV${SDL2DIR} ${LEDERNIERMORKID_DEPENDENCIES_DIR})
 
+find_package(Bullet REQUIRED)
+include_directories(${BULLET_INCLUDE_DIRS})
+target_link_libraries(LeDernierMorkid ${BULLET_LIBRARIES})
+
 find_package(OGRE REQUIRED)
 unset(OGRE_FRAMEWORK_PATH CACHE)
 include_directories(${OGRE_INCLUDE_DIR})
