Finishing World system. Adding small demo.

--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -1,6 +1,7 @@
 [Popular]
 FileSystem=../Media/materials/textures
 FileSystem=../Media/materials/textures/nvidia
+FileSystem=../Media/models
 
 [Hlms]
 DoNotUseAsResource=../Media
