--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libsdl2-dev libbullet-dev
-  - hg clone https://bitbucket.org/sinbad/ogre && cd ogre/ && hg pull && hg update v2-1 && cmake . && make -j8 && sudo make install && cd ..
+  - hg clone https://bitbucket.org/sinbad/ogre && cd ogre/ && hg pull && hg update v2-1 && cmake -DOGRE_BUILD_SAMPLES2=0 . && make -j8 && sudo make install && cd ..
 
 script:
   - cmake . && make -j8
